--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -22,3 +22,10 @@
   margin: 0 25pt;
   cursor: pointer;
 }
+
+.site_menu_item_login {
+  background: #ff2d55;
+  color: white;
+  border-radius: 20px;
+  padding: 4pt 15pt;
+}
