--- a/client/src/pages/noAuth/index/index.styles.scss
+++ b/client/src/pages/noAuth/index/index.styles.scss
@@ -1,18 +1,18 @@
 .index_content_section {
   width: 90%;
   margin: 0 auto;
-  padding: 80pt 0 50pt 0;
+  padding: 40pt 0 50pt 0;
   border-bottom: 2px solid #edf0f1;
 }
 
 .index_hero {
-  height: 425pt;
+  height: 400pt;
   background: #f1f1f1;
   border-radius: 20pt;
 }
 
 .index_hero_text {
-  font-size: 72pt;
+  font-size: 40pt;
   color: white;
   width: 75%;
   margin: 0 auto;
@@ -23,12 +23,13 @@
 }
 
 .text_par {
-  font-size: 24pt;
+  font-size: 20pt;
   color: #464646;
 }
 
 .first_text_par {
   text-align: center;
+  padding: 20pt 0 0 0;
 }
 
 .banquet_home_button {
@@ -69,10 +70,10 @@
 }
 
 .index_logo_text {
-  font-size: 30pt;
+  font-size: 20pt;
   color: #2c2c2c;
   text-align: center;
-  margin-top: 80pt;
+  margin-top: 50pt;
 }
 
 .index_third_section {
@@ -89,12 +90,12 @@
 
 .index_third_img {
   background: #f1f1f1;
-  height: 345pt;
+  height: 300pt;
   border-radius: 20pt;
 }
 
 .index_third_title {
-  font-size: 48pt;
+  font-size: 30pt;
   color: #2c2c2c;
   /*width: 37%;*/
 }
@@ -109,13 +110,13 @@
 
 .index_last {
   background: #f1f1f1;
-  height: 470pt;
+  height: 420pt;
   border-radius: 20pt;
 }
 
 .index_last_text {
   color: #2c2c2c;
-  font-size: 48pt;
+  font-size: 30pt;
   width: 37%;
   padding: 35pt 0 0 48pt;
   margin-bottom: 200pt;
