--- a/client/src/pages/noAuth/our-story/our-story.styles.scss
+++ b/client/src/pages/noAuth/our-story/our-story.styles.scss
@@ -3,18 +3,18 @@
 }
 
 .story_page_inner {
-  padding: 108pt 0 277pt 0;
+  padding: 108pt 0 150pt 0;
   width: 75%;
   margin: 0 auto;
 }
 
 .story_page_section_title {
-  font-size: 52pt;
+  font-size: 40pt;
 }
 
 .story_page_section_content {
   display: flex;
-  padding: 45pt 0 150pt 0;
+  padding: 45pt 0 100pt 0;
 }
 
 .story_page_text_container_first {
@@ -30,7 +30,7 @@
 }
 
 .story_page_text {
-  font-size: 21pt;
+  font-size: 20pt;
   color: #606060;
 }
 
@@ -48,16 +48,15 @@
 
 .story_page_section_title_last {
   text-align: center;
-  padding-bottom: 80pt;
+  padding-bottom: 50pt;
 }
 
 .story_page_image_third {
   width: 37%;
-  margin: 0 auto;
   height: 292pt;
   background-color: #f1f1f1;
   border-radius: 20pt;
-  margin-bottom: 100pt;
+  margin: 0 auto 50pt;
 }
 
 .site_page_title_container {
@@ -65,10 +64,10 @@
 }
 
 .site_page_title {
-  font-size: 72pt;
+  font-size: 40pt;
   width: 90%;
   margin: 0 auto;
-  padding: 49pt 0 82pt 0;
+  padding: 49pt 0 49pt 0;
 }
 
 .site_page_title_new {
