--- a/client/src/components/settings/settings-payment/settings-payment.styles.scss
+++ b/client/src/components/settings/settings-payment/settings-payment.styles.scss
@@ -45,6 +45,13 @@
   border-bottom: 2px solid #f5f5f5;
 }
 
+.settings_payment_complex_row_no_border {
+  font-size: 14pt;
+  display: flex;
+  justify-content: space-between;
+  padding: 23pt 32pt;
+}
+
 .settings_payment_left {
   width: 30%;
 }
@@ -68,14 +75,29 @@
 }
 
 .settings_payment_row {
-  padding: 24pt 32pt;
-  border-bottom: 2px solid #f5f5f5;
   display: flex;
   justify-content: space-between;
-  font-size: 16pt;
-  align-items: center;
 }
 
 .settings_menu_r_chevron {
   color: #ff2d55;
+}
+
+.new_payment {
+  padding: 24pt 32pt;
+  border-bottom: 2px solid #f5f5f5;
+  font-size: 16pt;
+  align-items: center;
+}
+
+.new_payment_input {
+  width: 80%;
+  font-size: 12pt;
+  border: 1px solid #ff2d55;
+  height: 45pt;
+  padding: 0 35px 0 35px;
+  margin: 10px 0 0 0;
+  border-radius: 15px;
+  color: #75797e;
+  outline: none;
 }
