profile and images

--- a/client/src/pages/noAuth/index/index.styles.scss
+++ b/client/src/pages/noAuth/index/index.styles.scss
@@ -9,6 +9,7 @@
   height: 400pt;
   background: #f1f1f1;
   border-radius: 20pt;
+  //background-image: url("/images/main-1.jpg");
 }
 
 .index_hero_text {
