Images fix and app modifications based on document

--- a/client/src/components/orders/orders-list/orders-list.styles.scss
+++ b/client/src/components/orders/orders-list/orders-list.styles.scss
@@ -3,6 +3,7 @@
   background: #bbd0de;
   display: flex;
   justify-content: space-between;
+  border-top: 1px solid white;
 }
 
 .order_details_left {
