--- a/client/src/pages/noAuth/our-story/our-story.styles.scss
+++ b/client/src/pages/noAuth/our-story/our-story.styles.scss
@@ -25,7 +25,12 @@
 .story_page_image {
   width: 26%;
   height: 382pt;
-  background-color: #f1f1f1;
+}
+
+.story-page-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 20pt;
 }
 
@@ -42,7 +47,12 @@
 .story_page_image_second {
   width: 37%;
   height: 241pt;
-  background-color: #f1f1f1;
+}
+
+.story-page-second-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 20pt;
 }
 
@@ -52,11 +62,16 @@
 }
 
 .story_page_image_third {
-  width: 37%;
-  height: 292pt;
-  background-color: #f1f1f1;
-  border-radius: 20pt;
+  width: 545pt;
+  height: 313pt;
   margin: 0 auto 50pt;
+}
+
+.story-page-third-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20pt;
 }
 
 .site_page_title_container {
