--- a/client/src/components/menu/addDish/addDish.styles.scss
+++ b/client/src/components/menu/addDish/addDish.styles.scss
@@ -122,6 +122,7 @@
   position: relative;
   width: 80%;
   margin-top: 10pt;
+  margin: 0 auto;
 }
 
 .trash_icon_btn {
@@ -143,8 +144,7 @@
   height: 32pt;
   border-radius: 40px;
   border: 2px solid #ff2d55;
-  margin: 0 auto;
-  margin-top: 20pt;
+  margin: 20pt auto 85pt;
 }
 
 .plus_icon_edit {
