--- a/client/src/components/profile/profile-image/profile-image.styles.scss
+++ b/client/src/components/profile/profile-image/profile-image.styles.scss
@@ -13,7 +13,6 @@
 }
 
 .main_profile_img {
-  background: #F4F4F4;
   width: 218pt;
   height: 227pt;
   border-radius: 10px;
@@ -22,4 +21,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.profileImgLogged {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
