--- a/client/src/components/menu/addDish/addDish.styles.scss
+++ b/client/src/components/menu/addDish/addDish.styles.scss
@@ -137,6 +137,7 @@
   position: absolute;
   width: 90%;
   bottom: 0;
+  background: #eff9ff;
 }
 
 .popup_edit_add_btn {
@@ -144,7 +145,7 @@
   height: 32pt;
   border-radius: 40px;
   border: 2px solid #ff2d55;
-  margin: 20pt auto 85pt;
+  margin: 20pt auto 90pt;
 }
 
 .plus_icon_edit {
