--- a/client/src/components/profile/profile-delivery/profile-delivery.styles.scss
+++ b/client/src/components/profile/profile-delivery/profile-delivery.styles.scss
@@ -99,3 +99,13 @@
 .hiddenComp {
   display: none;
 }
+
+.address-new-del-section {
+  color: #002439;
+  font-size: 19px;
+  padding-left: 10px;
+}
+
+.address-new-del-section:focus {
+  outline: none;
+}
