fixed slider issue from settings - reminders

--- a/client/src/components/settings/settings-link/settings-link.styles.scss
+++ b/client/src/components/settings/settings-link/settings-link.styles.scss
@@ -5,7 +5,7 @@
   border-bottom: 2px solid #eef8fe;
   font-size: 16pt;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   cursor: pointer;
 }
