--- a/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
+++ b/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
@@ -58,11 +58,11 @@
   border-radius: 50%;
 }
 
-input:checked + .slider,
+/*input:checked + .slider,
 input:checked + .slider_menu {
   background-color: #4bd964;
   border-color: white;
-}
+}*/
 
 input:focus + .slider {
   box-shadow: 0 0 1px #4bd964;
@@ -77,9 +77,8 @@ input:checked + .slider_menu:before {
 }
 
 .slider_notifications {
-  background: #dee3e6;
-  border: 1px solid #778e9c;
-}
+  background: white;
+  border: 1px solid #fe154c;
 
 .slider_notifications:before {
   border: 1px solid #778e9c;
