--- a/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
+++ b/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
@@ -79,6 +79,7 @@ input:checked + .slider_menu:before {
 .slider_notifications {
   background: white;
   border: 1px solid #fe154c;
+}
 
 .slider_notifications:before {
   border: 1px solid #778e9c;
