--- a/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
+++ b/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
@@ -73,7 +73,7 @@ input:checked + .slider_menu:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
-  border-color: #ff2d55;
+  border-color: white;
   background: #ff2d55;
 }
 
