--- a/client/src/components/sidemenu/sidemenu-bottom/sidemenu-bottom.styles.scss
+++ b/client/src/components/sidemenu/sidemenu-bottom/sidemenu-bottom.styles.scss
@@ -8,7 +8,7 @@
   border-radius: 10px;
   height: 45px;
   position: absolute;
-  bottom: 25pt;
+  bottom: 90px;
   left: 13pt;
 }
 
@@ -46,4 +46,21 @@
 
 .slider_sidemen:before {
   background-color: transparent !important;
+}
+
+.log-out-side {
+  background: #ff2d55;
+  font-size: 14pt;
+  padding-top: 13px;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  height: 40px;
+  margin-top: 35px;
+  cursor: pointer;
+  width: 86%;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 20px;
+  left: 13pt;
 }
