small fix resolved

--- a/client/src/components/sidemenu/sidemenu-bottom/sidemenu-bottom.styles.scss
+++ b/client/src/components/sidemenu/sidemenu-bottom/sidemenu-bottom.styles.scss
@@ -52,7 +52,7 @@
   background: #ff2d55;
   font-size: 14pt;
   padding-top: 13px;
-  color: #fff;
+  color: white;
   border-radius: 10px;
   text-align: center;
   height: 40px;
