--- a/client/src/components/profile/profile-delivery/profile-delivery.styles.scss
+++ b/client/src/components/profile/profile-delivery/profile-delivery.styles.scss
@@ -71,7 +71,7 @@
 }
 
 .delivery_collection_select_inner {
-  border: 1px solid #f5f5f5;
+  border: 1px solid #d4e7ef;
   border-radius: 15px;
   height: 20pt;
   padding: 10pt 0 10pt 0;
