--- a/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
+++ b/client/src/components/settings/settings-notifications/settings-notifications.styles.scss
@@ -79,15 +79,15 @@ input:checked + .slider_menu:before {
 
 .slider_notifications {
   background: white;
-  border: 1px solid #778e9c;
+  /*border: 1px solid #778e9c;*/
 }
 
-.slider_notifications:before {
+/*.slider_notifications:before {
   border: 1px solid #778e9c;
-}
+}*/
 
 input:checked + .slider_notifications {
-  background-color: white;
+  background-color: #d0d0d0;
   border-color: #ff2d55;
 }
 
