--- a/client/src/components/profile/profile-delivery/profile-delivery.styles.scss
+++ b/client/src/components/profile/profile-delivery/profile-delivery.styles.scss
@@ -68,7 +68,6 @@
 
 .delivery_radius {
   font-size: 12pt;
-  text-align: center;
 }
 
 .delivery_collection_select_inner {
@@ -92,6 +91,10 @@
 
 .delivery-options-profile {
   width: 45%;
+}
+
+.delivery-options-center {
+  text-align: center;
 }
 
 .input-cost {
