--- a/client/src/components/settings/settings-help/settings-help.styles.scss
+++ b/client/src/components/settings/settings-help/settings-help.styles.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid #f5f5f5;
+  cursor: pointer;
 }
 
 .settings_menu_r_chevron {
