--- a/client/src/components/profile/profile-category/profile-category.styles.scss
+++ b/client/src/components/profile/profile-category/profile-category.styles.scss
@@ -92,8 +92,8 @@
   cursor: pointer;
 }
 
-.x_btn_category {
-  font-size: 12pt !important;
+.x_btn_category_profile {
+  font-size: 12pt;
   padding-left: 10pt;
 }
 
