--- a/client/src/pages/auth/menu/menu.styles.scss
+++ b/client/src/pages/auth/menu/menu.styles.scss
@@ -46,8 +46,8 @@
   margin-top: 10px;
 }
 .product_ex {
-  height: 475pt;
-  width: 325pt;
+  height: 440pt;
+  width: 300pt;
   background: white;
   border-radius: 15px;
   margin-top: 50pt;
@@ -111,7 +111,7 @@
 .order_toggle_menu {
   width: 98%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   border: 2px solid #fe154c;
   color: #fe154c;
   border-radius: 10px;
