--- a/client/src/components/sidemenu/sidemenu-bottom/sidemenu-bottom.styles.scss
+++ b/client/src/components/sidemenu/sidemenu-bottom/sidemenu-bottom.styles.scss
@@ -2,7 +2,7 @@
   width: 85%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   border: 2px solid #fe154c;
   color: #fe154c;
   border-radius: 10px;
@@ -15,6 +15,7 @@
 .order_toggle_text {
   font-size: 14pt;
   padding-top: 9px;
+  margin-left: 10px;
 }
 
 .switch {
