--- a/client/src/pages/noAuth/register/register.styles.scss
+++ b/client/src/pages/noAuth/register/register.styles.scss
@@ -20,3 +20,9 @@ input[type=number]::-webkit-inner-spin-button {
     color: #c5c5c8;
     margin: 10pt 0;
 }
+
+.errMsg {
+    padding-top: 20px;
+    color: #ff2d55;
+    text-align: center;
+}
