Updated privacy page

--- a/client/src/pages/noAuth/our-story/our-story.styles.scss
+++ b/client/src/pages/noAuth/our-story/our-story.styles.scss
@@ -17,6 +17,10 @@
   padding: 45pt 0 100pt 0;
 }
 
+.priv_page_section_content {
+  padding: 45pt 0 100pt 0;
+}
+
 .story_page_text_container_first {
   padding-left: 11%;
   width: 74%;
