--- a/client/src/components/orders/orders-details/orders-details.styles.scss
+++ b/client/src/components/orders/orders-details/orders-details.styles.scss
@@ -36,12 +36,20 @@
 
 .order_details_second {
   margin-top: 13pt;
-  min-height: 150pt;
+  min-height: 70pt;
 }
 
 .order_details_second_box {
   display: flex;
   width: 65%;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 5px 15px 15px 0px rgba(0,0,0,0.1);
+}
+
+.order_details_second_box_full {
+  display: flex;
+  width: 100%;
   background: white;
   border-radius: 10px;
   box-shadow: 5px 15px 15px 0px rgba(0,0,0,0.1);
@@ -80,7 +88,7 @@
   background: white;
   border-radius: 10px;
   padding: 10pt 18pt;
-  margin-top: 25pt;
+  margin-top: 15pt;
   box-shadow: 2px 14px 30px 10px rgba(0,0,0,0.1);
 }
 
@@ -129,7 +137,7 @@
   font-size: 16pt;
   border-radius: 10px;
   text-align: center;
-  margin: 28px 0 32px 0;
+  margin: 28px 0 32px 20px;
   width: 160px;
   padding: 5px 12px 7px 12px;
   float: right;
