--- a/client/src/components/orders/orders-details/orders-details.styles.scss
+++ b/client/src/components/orders/orders-details/orders-details.styles.scss
@@ -155,3 +155,16 @@
   float: right;
   cursor: pointer;
 }
+
+.taxes {
+  padding: 10pt 0 0 0;
+  font-size: 16pt;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 105px;
+}
+
+.container_taxes {
+  border-bottom: 1px solid #98A7AF;
+  padding: 0 0 30px 0;
+}
