add settings label

--- a/client/src/components/sidemenu/sidemenu-top/sidemenu-top.styles.scss
+++ b/client/src/components/sidemenu/sidemenu-top/sidemenu-top.styles.scss
@@ -25,10 +25,15 @@
   color: #ff2d55;
 }
 
+.settings_icon {
+  padding-top: 8px;
+}
+
 .settings_flex {
   display: flex;
 }
 
 .label_settings{
+  font-size: 18pt;
   margin-left: 10px;
 }
