--- a/client/src/components/menu/edit-categories/edit-categories.styles.scss
+++ b/client/src/components/menu/edit-categories/edit-categories.styles.scss
@@ -72,9 +72,9 @@
 
 .trash_icon_btn {
   font-size: 35px !important;
-  position: absolute;
-  top: 55px;
-  right: 35px;
+  //position: absolute;
+  //top: 55px;
+  //right: 35px;
   color: #ff2d55;
 }
 
