--- a/client/src/components/sidemenu/sidemenu-button/sidemenu-button.styles.scss
+++ b/client/src/components/sidemenu/sidemenu-button/sidemenu-button.styles.scss
@@ -65,3 +65,14 @@
 .orders-sidemenu > .selected{
   background: #bbd0de;
 }
+
+.title_circle_sidemenu {
+  background: #fe154c;
+  width: 10px;
+  height: 10px;
+  border-radius: 50px;
+  position: absolute;
+  top: 10px;
+  right: 43%;
+  z-index: 10;
+}
